--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
     <title>GeoLocateIP</title>
   </head>
   <body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <div id="root"></div>
     <!--
       This HTML file is a template.
